[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/Instructions.gd" type="Script" id=1]
[ext_resource path="res://Font/AncientModernTales-a7Po.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.572549, 0.654902, 0.521569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 43
use_filter = true
font_data = ExtResource( 2 )

[node name="Instructions" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = -28.0
margin_top = -6.29289
margin_right = 1059.0
margin_bottom = 644.707
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 439.82
margin_top = 390.323
margin_right = 558.82
margin_bottom = 436.323
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panel"]
margin_left = 81.317
margin_top = 27.5773
margin_right = 200.317
margin_bottom = 73.5773
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleLabel" type="Label" parent="Panel"]
anchor_right = 0.028
margin_left = 356.0
margin_top = 25.6066
margin_right = 617.384
margin_bottom = 73.6066
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.854902, 0.913725, 0.890196, 1 )
text = "How to Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instructionsLabel" type="Label" parent="Panel"]
anchor_right = 0.028
margin_left = 198.315
margin_top = 91.3675
margin_right = 924.699
margin_bottom = 133.367
text = "Complete the daily quest challenges to earn XP and level up. Earning XP provides access to different combat weapons."
valign = 1

[node name="instructionsLabel2" type="Label" parent="Panel"]
anchor_right = 0.028
margin_left = 197.586
margin_top = 126.465
margin_right = 607.15
margin_bottom = 162.465
text = "Use the combat weapons to fight other players and the enemy NPCs."
valign = 1

[node name="instructionsLabel3" type="Label" parent="Panel"]
anchor_right = 0.028
margin_left = 198.293
margin_top = 166.063
margin_right = 634.857
margin_bottom = 202.063
text = "The sword requires 0xp. Press the Shift key on your keyboard to use it."
valign = 1

[node name="instructionsLabel4" type="Label" parent="Panel"]
anchor_right = 0.028
margin_left = 197.586
margin_top = 203.539
margin_right = 821.97
margin_bottom = 239.539
text = "As you move up the skill tree, The dagger requires 100xp. Press the Control key on your keyboard to use it."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instructionsLabel5" type="Label" parent="Panel"]
anchor_right = 0.028
margin_left = 195.464
margin_top = 245.965
margin_right = 819.848
margin_bottom = 281.965
text = "As you move up the skill tree, The glaive requires 300xp. Press the Enter key on your keyboard to use it."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instructionsLabel6" type="Label" parent="Panel"]
anchor_right = 0.028
margin_left = 195.464
margin_top = 290.513
margin_right = 819.848
margin_bottom = 326.513
text = "As you move up the skill tree, The Helios Sun Ball requires 500xp. Press the Tab key on your keyboard to use it."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_Button2_pressed"]
